# which-libc

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs
src/: bytes.rs  detect.c  detect.h  lib.rs  macro.h
