[package]
name = "which-libc"
description = "Identify which libc is targeted"

version = "0.1.0"

authors = ["Dubiousjim <dubiousjim@gmail.com>"]
edition = "2018"
license = "MIT"

repository = "https://github.com/dubiousjim/which-libc"

exclude = [
  "/ci/*",
  "/.gitignore",
  "/target/",
  "Cargo.lock",
  "**/*.rs.bk",
  "/notes/",
]

publish = false
readme = "README.md"

[dependencies]
minreq = { version = "2.1.0", features = ["https"] }

[build-dependencies]
cc = "1.0.52"

#vim: ft=conf
